added journal entry function

--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,7 @@
         <button type="button">Record Journal</button>
     </form>
 </div>   
+<script src="scripts/journal.js"></script>
 </body>
 
 </html>
