--- a/src/index.html
+++ b/src/index.html
@@ -47,8 +47,12 @@
         
         <button type="button">Record Journal</button>
     </form>
-</div>   
+</div>  
+
+<script src="scripts/data.js"></script>
 <script src="scripts/journal.js"></script>
+<script src="scripts/entriesDOM.js"></script>
+<script src="scripts/entryComponent.js"></script>
 </body>
 
 </html>
