--- a/src/index.html
+++ b/src/index.html
@@ -48,11 +48,8 @@
         <button type="button">Record Journal</button>
     </form>
 </div>  
+<script type="module"src="scripts/journal.js"></script>
 
-<script src="scripts/data.js"></script>
-<script src="scripts/journal.js"></script>
-<script src="scripts/entriesDOM.js"></script>
-<script src="scripts/entryComponent.js"></script>
 </body>
 
 </html>
