--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
                 <textarea rows="4" cols="50" id="eJournalEntry" required></textarea>
             </fieldset>
 
-            <button type="button" id="recordButton">Record Journal</button>
+            <button type="button" class="editRecordButton">Record Journal</button>
         </form>
     </div>
     </div>
